feat: add initial component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,9 @@
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "esModuleInterop": true,
-    "importsNotUsedAsValues": "error",
-    "forceConsistentCasingInFileNames": true,
+    "importsNotUsedAsValues": "preserve",
     "jsx": "react",
-    "lib": ["esnext"],
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
@@ -22,6 +20,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext"
-  }
+    "target": "es5"
+  },
+  "exclude": ["node_modules", "node_modules/@shopify/react-native-skia/*"]
 }
