refactor: type declaration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
+    "declaration": true,
     "esModuleInterop": true,
     "importsNotUsedAsValues": "preserve",
     "jsx": "react",
