Revert "feat: add example"
This reverts commit bdbac4571cefa0347ab9b1047403b15fb8e6555a.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "ios",
     "cpp",
     "react-native-squircle-skia.podspec",
-    "!lib/typescript/Example",
     "!android/build",
     "!ios/build",
     "!**/__tests__",
@@ -27,8 +26,7 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "bob build",
     "release": "release-it",
-    "pods": "cd Example && pod-install --quiet",
-    "bootstrap": "yarn && yarn pods"
+    "bootstrap": "yarn"
   },
   "keywords": [
     "react-native",
@@ -81,7 +79,6 @@
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
-      "<rootDir>/Example/node_modules",
       "<rootDir>/lib/"
     ]
   },
