feat: add example

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ios",
     "cpp",
     "react-native-squircle-skia.podspec",
+    "!lib/typescript/Example",
     "!android/build",
     "!ios/build",
     "!**/__tests__",
@@ -26,7 +27,8 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "bob build",
     "release": "release-it",
-    "bootstrap": "yarn"
+    "pods": "cd Example && pod-install --quiet",
+    "bootstrap": "yarn && yarn pods"
   },
   "keywords": [
     "react-native",
@@ -79,6 +81,7 @@
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
+      "<rootDir>/Example/node_modules",
       "<rootDir>/lib/"
     ]
   },
