--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,13 +22,21 @@ jobs:
           keys:
             - dependencies-{{ checksum "package.json" }}
             - dependencies-
+      - restore_cache:
+          keys:
+            - dependencies-example-{{ checksum "Example/package.json" }}
+            - dependencies-example-
       - run:
           name: Install dependencies
           command: |
+            yarn install --cwd example --frozen-lockfile
             yarn install --frozen-lockfile
       - save_cache:
           key: dependencies-{{ checksum "package.json" }}
           paths: node_modules
+      - save_cache:
+          key: dependencies-example-{{ checksum "Example/package.json" }}
+          paths: example/node_modules
       - persist_to_workspace:
           root: .
           paths: .
