--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -126,7 +126,7 @@ def enableHermes = project.ext.react.get("enableHermes", false);
 def nativeArchitectures = project.getProperties().get("reactNativeDebugArchitectures")
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
+    ndkVersion ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
