--- a/Example/package.json
+++ b/Example/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.2.0",
     "@shopify/react-native-skia": "https://github.com/Shopify/react-native-skia/releases/download/v0.1.75-alpha/shopify-react-native-skia-0.1.75.tgz",
     "react": "17.0.2",
     "react-native": "0.66.4"
